# selfie_carolocup2020

./: .clang-format  .gitignore  .ycm_extra_conf.py  LICENSE  README.md  deploy.sh  deploy2.sh  deployREADME.md  environment.yml  resolve-dependencies.sh
src/camera/image_proc_fisheye/: CMakeLists.txt  nodelet_plugins_.xml
src/camera/pylon_camera/: CMakeLists.txt  README.rst  setup.py
src/camera/selfie_camera/: CMakeLists.txt  package.xml
src/nn_tester/: CMakeLists.txt  package.xml
src/selfie_app_communication/: CMakeLists.txt  README.md  operations.yaml  package.xml  settings.xml
src/selfie_avoiding_obstacles/: CMakeLists.txt  README.md  package.xml
src/selfie_control/: CMakeLists.txt  README.md  package.xml
src/selfie_control/cfg/: HeadingCoeff.cfg  pidTuner.cfg
src/selfie_control/launch/: control.launch
src/selfie_control/scripts/: const_float64.py  offset_combiner.py
src/selfie_control/src/: cmd_creator.cpp  pid_tuner.cpp
src/selfie_diagnostic_node/: CMakeLists.txt  README.md  package.xml
src/selfie_free_drive/: CMakeLists.txt  README.md  package.xml
src/selfie_fuzzy_logic/: CMakeLists.txt  package.xml
src/selfie_intersection/: CMakeLists.txt  README.md  package.xml
src/selfie_launch/: CMakeLists.txt  package.xml
src/selfie_msgs/: CMakeLists.txt  README.md  package.xml
src/selfie_msgs/action/: driving.action  intersection.action  park.action  parking.action  search.action  starting.action
src/selfie_msgs/msg/: ParkingInfo.msg  PolygonArray.msg  RoadMarkings.msg
src/selfie_odometry/: CMakeLists.txt  README.md  package.xml
src/selfie_park/: CMakeLists.txt  README.md  package.xml
src/selfie_park/cfg/: detect_parking_spot.cfg  park_server.cfg
src/selfie_park/include/selfie_park/: Search_client_mock.h  Search_server.h  park_client.h  park_server.h  shapes.h
src/selfie_park/launch/: manager_test.launch  park_test.launch  parking.launch  test.launch  transforms.launch
src/selfie_park/script/: park_manager_test.py  pub_park_spot.py
src/selfie_park/src/: Search_client_mock.cpp  Search_server.cpp  detect_parking_spot.cpp  detect_parking_spot_mock_client.cpp  park_client.cpp  park_server.cpp
src/selfie_parking_manager/: CMakeLists.txt  package.xml
src/selfie_path_planner/: CMakeLists.txt  README.md  package.xml
src/selfie_perception/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  package.xml
src/selfie_rqt/: CMakeLists.txt  package.xml
src/selfie_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
src/selfie_rviz/launch/: rviz.launch
src/selfie_rviz/rviz/: rviz.rviz  selfie.rviz
src/selfie_rviz/src/: road_markings_display.cpp  road_markings_display.h  road_markings_visual.cpp  road_markings_visual.h
src/selfie_scheduler/: CMakeLists.txt  README.md  package.xml
src/selfie_starting_procedure/: CMakeLists.txt  README.md  package.xml
src/selfie_stm32_bridge/: CMakeLists.txt  README.md  package.xml
(+155 files in other folders)
