<?xml version="1.0"?>
<package format="2">
  <name>selfie_msgs</name>
  <version>0.0.0</version>
  <description>The selfie_msgs package</description>
  <maintainer email="gotlib.adam@gmail.com">Adam Gotlib</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>


  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

</package>
