<?xml version="1.0"?>
<package format="2">
  <name>selfie_rviz</name>
  <version>0.0.0</version>
  <description>The selfie_rviz package</description>

  <maintainer email="gotlib.adam+dev@gmail.com">Adam Gotlib</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>selfie_msgs</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
